--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation "androidx.annotation:annotation:1.1.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Architecture Components
