--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -60,35 +60,32 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation "androidx.annotation:annotation:1.1.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Architecture Components
     implementation 'androidx.room:room-runtime:2.2.6'
     kapt 'androidx.room:room-compiler:2.2.6'
     implementation 'androidx.room:room-ktx:2.2.6'
-
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     //noinspection LifecycleAnnotationProcessorWithJava8
     kapt 'androidx.lifecycle:lifecycle-compiler:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
 
+
     // Dependencies for local unit tests
     testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'org.mockito:mockito-inline:2.25.1'
+    testImplementation 'org.mockito:mockito-inline:3.4.6'
 
     // Dependencies for Android instrumented unit tests
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation "org.mockito:mockito-core:3.4.6"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    testImplementation "androidx.room:room-testing:2.2.6"
-    testImplementation "android.arch.persistence.room:testing:1.1.1"
-    androidTestImplementation "androidx.room:room-testing:2.2.6"
+    androidTestImplementation "android.arch.persistence.room:testing:2.2.5"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // AndroidX Test - JVM testing
     testImplementation "androidx.test:core-ktx:1.3.0"
